<resources>
    <string name="app_name">CallJots</string>
    <string name="name_ed">name</string>
    <string name="pass_ed">Password</string>
    <string name="Login_b">Login</string>
    <string name="SignUpRed_b">Signup</string>
    <string name="Sign_b">sign Up</string>
    <string name="LoginRed_b">Login</string>
    <string name="toastName">Please enter your email</string>
    <string name="Toastpass">please enter the password</string>
    <string name="emailExsit">The email address is already in use by another account.</string>
    <string name="forgetPass">Forget password</string>
    <string name="title_activity_reser_pass">ReserPassActivity</string>
    <string name="ResetPass">Reset Password</string>
    <string name="resetPass">Reset password</string>
    <string name="ResetDone">We have sent you instructions to reset your password!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="chosePrim">Choose the category for your Contact</string>
    <string name="FirstClass">Type Your First Classification </string>
    <string name="SecClass">Type Your Second Classification </string>
    <string name="AddToB">Add as Special Contact</string>
    <string name="ADDTOtitle">Add Special Contact</string>
    <string name="CompanyName">Company Name</string>
    <string name="Address">Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NoteToken">Note token on :  </string>
    <string name="Notetitle">Note Title</string>
    <string name="starthere"></string>
    <string name="EnterNoteTitle">please Enter Note title ...</string>
    <string name="EnterNote">please enter the note ..</string>
    <string name="family_cat">Family</string>
    <string name="Bussiness_cat">Bussiness</string>
    <string name="Friend_cat">Friend</string>
    <string name="action_markcomplete">Mark Completed</string>
    <string name="action_edit">Edit</string>
    <string name="action_delteNote">Delete</string>
    <string name="CallDuration">Call Duration : </string>
    <string name="AccoumlpishB">Accomplish</string>
    <string name="NoPermission">you dont have a permission</string>
    <string name="search">search</string>
    <string name="search_hint">fds</string>
    <string name="NoContact">You dont Have any Special Contact yet</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Never miss any call note again</string>
    <string name="start">Get Started</string>
    <string name="specWelcome_txt">Welcome</string>
    <string name="savNote">Save Your Note about this call Log</string>
    <string name="addToSpec">This contact is not one of your special contact</string>
    <string name="newCon">This is a new Contact</string>
    <string name="addCont">Add new Contact</string>
    <string name="addNote">Add Note</string>
    <string name="AddTospec">Add To Specail Contact</string>
    <string name="channel_name">notify_name</string>
    <string name="channel_description">descchannel</string>
    <string name="typename">Type Contact Name</string>
    <string name="typeEmail">Type Contact Email</string>
    <string name="typeSecPhone">Type Second Phone Number</string>
    <string name="typeFirstPhone">Type First Phone Number</string>
    <string name="AddASspec">Add as a Specal contact</string>
    <string name="Addcont">Add Contact</string>
    <string name="Name">Please enter the name</string>
    <string name="phone">please enter the first phone</string>
    <string name="Contact_Id">contact_Id</string>
    <string name="AddDone">your contact has been added successfully</string>
    <string name="NameExtra">Name</string>
    <string name="imageUrl">imageUrl</string>
    <string name="FirstPhone">PhoneNo</string>
    <string name="NoteAdded">the Note has been added succefully</string>
    <string name="phoneNoExtra">phoneNo</string>
    <string name="Indecator">ContactInd</string>
    <string name="Contact_Info">conactInfo</string>
    <string name="exit">are you sure you want to exit ?</string>
    <string name="FamilyCat">Family</string>
    <string name="missidCall">Missed call</string>
    <string name="label_TakeANote">Do you want to take a note ?</string>
    <string name="label_OkTakeAnote">Take a note</string>
    <string name="label_CancelTakeAnote">Cancel</string>
    <string name="Label_ADDNewContact">Add To Phone Contact</string>
    <string name="Qusetion_label">Do you want to add this number to your phone contact ?</string>
    <string name="Label_ADDAddAsSpecialContact">Do you want to save this contact as special contact ?</string>
    <string name="label_OKAddAsSpecial">Add as special contact</string>
    <string name="ContactName_Extra">ContactName_extra</string>
    <string name="Note_Extra">Note_extra</string>
    <string name="NoteTitle_Extra">NoteTitle_extra</string>
    <string name="ImgUrl_extra">imgUrl_extra</string>
    <string name="ContactImgUrl_Extra">ContactImgUrl_extra</string>
    <string name="ContactPhoneNumber_Extra">ContactPhoneNo_extra</string>
    <string name="ContactId_Extra">ContactId_extra</string>
    <string name="NotifcationTitee_Note">Note :</string>
    <string name="action_Share">share the app</string>
    <string name="action_RateApp">Rate the app</string>
    <string name="toast_notSpecialContact">This Contact Is Not One Of Your Special Contact </string>
</resources>
