<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.NewContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/SpecContPhoto_imgView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/conphoto"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/SpecContName_txt"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/regulaer"
            android:text="Mai waleed abu Ajamieh"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SpecContPhoneNo_txt"
                android:fontFamily="@font/regulaer"
                android:textColor="@color/colorPrimary"
                android:text="Mai waleed abu Ajamieh"/>
        </LinearLayout>

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/chosePrimClass_txt"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:fontFamily="@font/bold"
            android:text="@string/chosePrim"/>

        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Button
                android:background="@drawable/border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bussiness_cat"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/semibold"
                android:id="@+id/BusIcon_btn"/>

            <Button
                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_cat"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/semibold"
                android:id="@+id/FamilyIcon_btn"/>

            <Button
                android:background="@drawable/border"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:text="@string/Friend_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:id="@+id/FriendIcon_img"/>


        </LinearLayout>

        <View
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"

            />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FirstClassifcation_ed"
            android:textSize="15sp"
            android:fontFamily="@font/regulaer"
            android:hint="@string/FirstClass"/>

        <EditText
            android:fontFamily="@font/regulaer"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:id="@+id/SecClassifcation_ed"
            android:hint="@string/SecClass"/>


        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:fontFamily="@font/regulaer"
            android:id="@+id/CompanyName_ed"
            android:textSize="15sp"
            android:hint="@string/CompanyName"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:fontFamily="@font/regulaer"
            android:id="@+id/Address_ed"
            android:textSize="15sp"
            android:hint="@string/Address"/>

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:id="@+id/AddToSpec_b"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/semibold"
            android:text="@string/AddToB"/>
    </LinearLayout>



</LinearLayout>
